src/brenda_parser/parsing/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> enzyme
Rule 1     enzyme -> ENZYME_ENTRY EC_NUMBER new_enzyme
Rule 2     new_enzyme -> <empty>
Rule 3     enzyme -> enzyme comment
Rule 4     enzyme -> enzyme protein_entry
Rule 5     enzyme -> enzyme reference_entry
Rule 6     enzyme -> enzyme entry
Rule 7     enzyme -> enzyme END
Rule 8     entry -> ENTRY new_entry
Rule 9     new_entry -> <empty>
Rule 10    entry -> entry CONTENT
Rule 11    entry -> entry proteins
Rule 12    entry -> entry comment
Rule 13    entry -> entry special
Rule 14    entry -> entry citations
Rule 15    reference_entry -> REFERENCE_ENTRY new_reference citations
Rule 16    new_reference -> <empty>
Rule 17    reference_entry -> reference_entry CONTENT
Rule 18    reference_entry -> reference_entry comment
Rule 19    reference_entry -> reference_entry special
Rule 20    protein_entry -> PROTEIN_ENTRY new_protein proteins
Rule 21    new_protein -> <empty>
Rule 22    protein_entry -> protein_entry CONTENT
Rule 23    protein_entry -> protein_entry accession
Rule 24    protein_entry -> protein_entry comment
Rule 25    protein_entry -> protein_entry citations
Rule 26    accession -> accession AND ACCESSION
Rule 27    accession -> accession CONTENT
Rule 28    accession -> ACCESSION
Rule 29    special -> LCURLY special RCURLY
Rule 30    special -> LCURLY RCURLY
Rule 31    special -> special SPECIAL
Rule 32    special -> SPECIAL
Rule 33    proteins -> POUND proteins POUND
Rule 34    proteins -> POUND POUND
Rule 35    proteins -> proteins PROTEIN
Rule 36    proteins -> PROTEIN
Rule 37    citations -> LANGLE citations RANGLE
Rule 38    citations -> LANGLE RANGLE
Rule 39    citations -> citations CITATION
Rule 40    citations -> CITATION
Rule 41    comment -> LPARENS comment RPARENS
Rule 42    comment -> LPARENS RPARENS
Rule 43    comment -> comment COMMENT
Rule 44    comment -> COMMENT

Terminals, with rules where they appear

ACCESSION            : 26 28
AND                  : 26
CITATION             : 39 40
COMMENT              : 43 44
CONTENT              : 10 17 22 27
EC_NUMBER            : 1
END                  : 7
ENTRY                : 8
ENZYME_ENTRY         : 1
LANGLE               : 37 38
LCURLY               : 29 30
LPARENS              : 41 42
POUND                : 33 33 34 34
PROTEIN              : 35 36
PROTEIN_ENTRY        : 20
RANGLE               : 37 38
RCURLY               : 29 30
REFERENCE_ENTRY      : 15
RPARENS              : 41 42
SPECIAL              : 31 32
error                : 

Nonterminals, with rules where they appear

accession            : 23 26 27
citations            : 14 15 25 37 39
comment              : 3 12 18 24 41 43
entry                : 6 10 11 12 13 14
enzyme               : 3 4 5 6 7 0
new_entry            : 8
new_enzyme           : 1
new_protein          : 20
new_reference        : 15
protein_entry        : 4 22 23 24 25
proteins             : 11 20 33 35
reference_entry      : 5 17 18 19
special              : 13 19 29 31

Parsing method: LALR

state 0

    (0) S' -> . enzyme
    (1) enzyme -> . ENZYME_ENTRY EC_NUMBER new_enzyme
    (3) enzyme -> . enzyme comment
    (4) enzyme -> . enzyme protein_entry
    (5) enzyme -> . enzyme reference_entry
    (6) enzyme -> . enzyme entry
    (7) enzyme -> . enzyme END

    ENZYME_ENTRY    shift and go to state 2

    enzyme                         shift and go to state 1

state 1

    (0) S' -> enzyme .
    (3) enzyme -> enzyme . comment
    (4) enzyme -> enzyme . protein_entry
    (5) enzyme -> enzyme . reference_entry
    (6) enzyme -> enzyme . entry
    (7) enzyme -> enzyme . END
    (41) comment -> . LPARENS comment RPARENS
    (42) comment -> . LPARENS RPARENS
    (43) comment -> . comment COMMENT
    (44) comment -> . COMMENT
    (20) protein_entry -> . PROTEIN_ENTRY new_protein proteins
    (22) protein_entry -> . protein_entry CONTENT
    (23) protein_entry -> . protein_entry accession
    (24) protein_entry -> . protein_entry comment
    (25) protein_entry -> . protein_entry citations
    (15) reference_entry -> . REFERENCE_ENTRY new_reference citations
    (17) reference_entry -> . reference_entry CONTENT
    (18) reference_entry -> . reference_entry comment
    (19) reference_entry -> . reference_entry special
    (8) entry -> . ENTRY new_entry
    (10) entry -> . entry CONTENT
    (11) entry -> . entry proteins
    (12) entry -> . entry comment
    (13) entry -> . entry special
    (14) entry -> . entry citations

    END             shift and go to state 7
    LPARENS         shift and go to state 8
    COMMENT         shift and go to state 9
    PROTEIN_ENTRY   shift and go to state 10
    REFERENCE_ENTRY shift and go to state 11
    ENTRY           shift and go to state 12

    comment                        shift and go to state 3
    protein_entry                  shift and go to state 4
    reference_entry                shift and go to state 5
    entry                          shift and go to state 6

state 2

    (1) enzyme -> ENZYME_ENTRY . EC_NUMBER new_enzyme

    EC_NUMBER       shift and go to state 13


state 3

    (3) enzyme -> enzyme comment .
    (43) comment -> comment . COMMENT

  ! shift/reduce conflict for COMMENT resolved as shift
    END             reduce using rule 3 (enzyme -> enzyme comment .)
    LPARENS         reduce using rule 3 (enzyme -> enzyme comment .)
    PROTEIN_ENTRY   reduce using rule 3 (enzyme -> enzyme comment .)
    REFERENCE_ENTRY reduce using rule 3 (enzyme -> enzyme comment .)
    ENTRY           reduce using rule 3 (enzyme -> enzyme comment .)
    $end            reduce using rule 3 (enzyme -> enzyme comment .)
    COMMENT         shift and go to state 14

  ! COMMENT         [ reduce using rule 3 (enzyme -> enzyme comment .) ]


state 4

    (4) enzyme -> enzyme protein_entry .
    (22) protein_entry -> protein_entry . CONTENT
    (23) protein_entry -> protein_entry . accession
    (24) protein_entry -> protein_entry . comment
    (25) protein_entry -> protein_entry . citations
    (26) accession -> . accession AND ACCESSION
    (27) accession -> . accession CONTENT
    (28) accession -> . ACCESSION
    (41) comment -> . LPARENS comment RPARENS
    (42) comment -> . LPARENS RPARENS
    (43) comment -> . comment COMMENT
    (44) comment -> . COMMENT
    (37) citations -> . LANGLE citations RANGLE
    (38) citations -> . LANGLE RANGLE
    (39) citations -> . citations CITATION
    (40) citations -> . CITATION

  ! shift/reduce conflict for LPARENS resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
    END             reduce using rule 4 (enzyme -> enzyme protein_entry .)
    PROTEIN_ENTRY   reduce using rule 4 (enzyme -> enzyme protein_entry .)
    REFERENCE_ENTRY reduce using rule 4 (enzyme -> enzyme protein_entry .)
    ENTRY           reduce using rule 4 (enzyme -> enzyme protein_entry .)
    $end            reduce using rule 4 (enzyme -> enzyme protein_entry .)
    CONTENT         shift and go to state 15
    ACCESSION       shift and go to state 19
    LPARENS         shift and go to state 8
    COMMENT         shift and go to state 9
    LANGLE          shift and go to state 20
    CITATION        shift and go to state 21

  ! LPARENS         [ reduce using rule 4 (enzyme -> enzyme protein_entry .) ]
  ! COMMENT         [ reduce using rule 4 (enzyme -> enzyme protein_entry .) ]

    accession                      shift and go to state 16
    comment                        shift and go to state 17
    citations                      shift and go to state 18

state 5

    (5) enzyme -> enzyme reference_entry .
    (17) reference_entry -> reference_entry . CONTENT
    (18) reference_entry -> reference_entry . comment
    (19) reference_entry -> reference_entry . special
    (41) comment -> . LPARENS comment RPARENS
    (42) comment -> . LPARENS RPARENS
    (43) comment -> . comment COMMENT
    (44) comment -> . COMMENT
    (29) special -> . LCURLY special RCURLY
    (30) special -> . LCURLY RCURLY
    (31) special -> . special SPECIAL
    (32) special -> . SPECIAL

  ! shift/reduce conflict for LPARENS resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
    END             reduce using rule 5 (enzyme -> enzyme reference_entry .)
    PROTEIN_ENTRY   reduce using rule 5 (enzyme -> enzyme reference_entry .)
    REFERENCE_ENTRY reduce using rule 5 (enzyme -> enzyme reference_entry .)
    ENTRY           reduce using rule 5 (enzyme -> enzyme reference_entry .)
    $end            reduce using rule 5 (enzyme -> enzyme reference_entry .)
    CONTENT         shift and go to state 22
    LPARENS         shift and go to state 8
    COMMENT         shift and go to state 9
    LCURLY          shift and go to state 25
    SPECIAL         shift and go to state 26

  ! LPARENS         [ reduce using rule 5 (enzyme -> enzyme reference_entry .) ]
  ! COMMENT         [ reduce using rule 5 (enzyme -> enzyme reference_entry .) ]

    comment                        shift and go to state 23
    special                        shift and go to state 24

state 6

    (6) enzyme -> enzyme entry .
    (10) entry -> entry . CONTENT
    (11) entry -> entry . proteins
    (12) entry -> entry . comment
    (13) entry -> entry . special
    (14) entry -> entry . citations
    (33) proteins -> . POUND proteins POUND
    (34) proteins -> . POUND POUND
    (35) proteins -> . proteins PROTEIN
    (36) proteins -> . PROTEIN
    (41) comment -> . LPARENS comment RPARENS
    (42) comment -> . LPARENS RPARENS
    (43) comment -> . comment COMMENT
    (44) comment -> . COMMENT
    (29) special -> . LCURLY special RCURLY
    (30) special -> . LCURLY RCURLY
    (31) special -> . special SPECIAL
    (32) special -> . SPECIAL
    (37) citations -> . LANGLE citations RANGLE
    (38) citations -> . LANGLE RANGLE
    (39) citations -> . citations CITATION
    (40) citations -> . CITATION

  ! shift/reduce conflict for LPARENS resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
    END             reduce using rule 6 (enzyme -> enzyme entry .)
    PROTEIN_ENTRY   reduce using rule 6 (enzyme -> enzyme entry .)
    REFERENCE_ENTRY reduce using rule 6 (enzyme -> enzyme entry .)
    ENTRY           reduce using rule 6 (enzyme -> enzyme entry .)
    $end            reduce using rule 6 (enzyme -> enzyme entry .)
    CONTENT         shift and go to state 27
    POUND           shift and go to state 32
    PROTEIN         shift and go to state 33
    LPARENS         shift and go to state 8
    COMMENT         shift and go to state 9
    LCURLY          shift and go to state 25
    SPECIAL         shift and go to state 26
    LANGLE          shift and go to state 20
    CITATION        shift and go to state 21

  ! LPARENS         [ reduce using rule 6 (enzyme -> enzyme entry .) ]
  ! COMMENT         [ reduce using rule 6 (enzyme -> enzyme entry .) ]

    proteins                       shift and go to state 28
    comment                        shift and go to state 29
    special                        shift and go to state 30
    citations                      shift and go to state 31

state 7

    (7) enzyme -> enzyme END .

    END             reduce using rule 7 (enzyme -> enzyme END .)
    LPARENS         reduce using rule 7 (enzyme -> enzyme END .)
    COMMENT         reduce using rule 7 (enzyme -> enzyme END .)
    PROTEIN_ENTRY   reduce using rule 7 (enzyme -> enzyme END .)
    REFERENCE_ENTRY reduce using rule 7 (enzyme -> enzyme END .)
    ENTRY           reduce using rule 7 (enzyme -> enzyme END .)
    $end            reduce using rule 7 (enzyme -> enzyme END .)


state 8

    (41) comment -> LPARENS . comment RPARENS
    (42) comment -> LPARENS . RPARENS
    (41) comment -> . LPARENS comment RPARENS
    (42) comment -> . LPARENS RPARENS
    (43) comment -> . comment COMMENT
    (44) comment -> . COMMENT

    RPARENS         shift and go to state 35
    LPARENS         shift and go to state 8
    COMMENT         shift and go to state 9

    comment                        shift and go to state 34

state 9

    (44) comment -> COMMENT .

    COMMENT         reduce using rule 44 (comment -> COMMENT .)
    END             reduce using rule 44 (comment -> COMMENT .)
    LPARENS         reduce using rule 44 (comment -> COMMENT .)
    PROTEIN_ENTRY   reduce using rule 44 (comment -> COMMENT .)
    REFERENCE_ENTRY reduce using rule 44 (comment -> COMMENT .)
    ENTRY           reduce using rule 44 (comment -> COMMENT .)
    $end            reduce using rule 44 (comment -> COMMENT .)
    CONTENT         reduce using rule 44 (comment -> COMMENT .)
    ACCESSION       reduce using rule 44 (comment -> COMMENT .)
    LANGLE          reduce using rule 44 (comment -> COMMENT .)
    CITATION        reduce using rule 44 (comment -> COMMENT .)
    LCURLY          reduce using rule 44 (comment -> COMMENT .)
    SPECIAL         reduce using rule 44 (comment -> COMMENT .)
    POUND           reduce using rule 44 (comment -> COMMENT .)
    PROTEIN         reduce using rule 44 (comment -> COMMENT .)
    RPARENS         reduce using rule 44 (comment -> COMMENT .)


state 10

    (20) protein_entry -> PROTEIN_ENTRY . new_protein proteins
    (21) new_protein -> .

    POUND           reduce using rule 21 (new_protein -> .)
    PROTEIN         reduce using rule 21 (new_protein -> .)

    new_protein                    shift and go to state 36

state 11

    (15) reference_entry -> REFERENCE_ENTRY . new_reference citations
    (16) new_reference -> .

    LANGLE          reduce using rule 16 (new_reference -> .)
    CITATION        reduce using rule 16 (new_reference -> .)

    new_reference                  shift and go to state 37

state 12

    (8) entry -> ENTRY . new_entry
    (9) new_entry -> .

    CONTENT         reduce using rule 9 (new_entry -> .)
    POUND           reduce using rule 9 (new_entry -> .)
    PROTEIN         reduce using rule 9 (new_entry -> .)
    LPARENS         reduce using rule 9 (new_entry -> .)
    COMMENT         reduce using rule 9 (new_entry -> .)
    LCURLY          reduce using rule 9 (new_entry -> .)
    SPECIAL         reduce using rule 9 (new_entry -> .)
    LANGLE          reduce using rule 9 (new_entry -> .)
    CITATION        reduce using rule 9 (new_entry -> .)
    END             reduce using rule 9 (new_entry -> .)
    PROTEIN_ENTRY   reduce using rule 9 (new_entry -> .)
    REFERENCE_ENTRY reduce using rule 9 (new_entry -> .)
    ENTRY           reduce using rule 9 (new_entry -> .)
    $end            reduce using rule 9 (new_entry -> .)

    new_entry                      shift and go to state 38

state 13

    (1) enzyme -> ENZYME_ENTRY EC_NUMBER . new_enzyme
    (2) new_enzyme -> .

    END             reduce using rule 2 (new_enzyme -> .)
    LPARENS         reduce using rule 2 (new_enzyme -> .)
    COMMENT         reduce using rule 2 (new_enzyme -> .)
    PROTEIN_ENTRY   reduce using rule 2 (new_enzyme -> .)
    REFERENCE_ENTRY reduce using rule 2 (new_enzyme -> .)
    ENTRY           reduce using rule 2 (new_enzyme -> .)
    $end            reduce using rule 2 (new_enzyme -> .)

    new_enzyme                     shift and go to state 39

state 14

    (43) comment -> comment COMMENT .

    COMMENT         reduce using rule 43 (comment -> comment COMMENT .)
    END             reduce using rule 43 (comment -> comment COMMENT .)
    LPARENS         reduce using rule 43 (comment -> comment COMMENT .)
    PROTEIN_ENTRY   reduce using rule 43 (comment -> comment COMMENT .)
    REFERENCE_ENTRY reduce using rule 43 (comment -> comment COMMENT .)
    ENTRY           reduce using rule 43 (comment -> comment COMMENT .)
    $end            reduce using rule 43 (comment -> comment COMMENT .)
    CONTENT         reduce using rule 43 (comment -> comment COMMENT .)
    ACCESSION       reduce using rule 43 (comment -> comment COMMENT .)
    LANGLE          reduce using rule 43 (comment -> comment COMMENT .)
    CITATION        reduce using rule 43 (comment -> comment COMMENT .)
    LCURLY          reduce using rule 43 (comment -> comment COMMENT .)
    SPECIAL         reduce using rule 43 (comment -> comment COMMENT .)
    POUND           reduce using rule 43 (comment -> comment COMMENT .)
    PROTEIN         reduce using rule 43 (comment -> comment COMMENT .)
    RPARENS         reduce using rule 43 (comment -> comment COMMENT .)


state 15

    (22) protein_entry -> protein_entry CONTENT .

    CONTENT         reduce using rule 22 (protein_entry -> protein_entry CONTENT .)
    ACCESSION       reduce using rule 22 (protein_entry -> protein_entry CONTENT .)
    LPARENS         reduce using rule 22 (protein_entry -> protein_entry CONTENT .)
    COMMENT         reduce using rule 22 (protein_entry -> protein_entry CONTENT .)
    LANGLE          reduce using rule 22 (protein_entry -> protein_entry CONTENT .)
    CITATION        reduce using rule 22 (protein_entry -> protein_entry CONTENT .)
    END             reduce using rule 22 (protein_entry -> protein_entry CONTENT .)
    PROTEIN_ENTRY   reduce using rule 22 (protein_entry -> protein_entry CONTENT .)
    REFERENCE_ENTRY reduce using rule 22 (protein_entry -> protein_entry CONTENT .)
    ENTRY           reduce using rule 22 (protein_entry -> protein_entry CONTENT .)
    $end            reduce using rule 22 (protein_entry -> protein_entry CONTENT .)


state 16

    (23) protein_entry -> protein_entry accession .
    (26) accession -> accession . AND ACCESSION
    (27) accession -> accession . CONTENT

    CONTENT         reduce using rule 23 (protein_entry -> protein_entry accession .)
    ACCESSION       reduce using rule 23 (protein_entry -> protein_entry accession .)
    LPARENS         reduce using rule 23 (protein_entry -> protein_entry accession .)
    COMMENT         reduce using rule 23 (protein_entry -> protein_entry accession .)
    LANGLE          reduce using rule 23 (protein_entry -> protein_entry accession .)
    CITATION        reduce using rule 23 (protein_entry -> protein_entry accession .)
    END             reduce using rule 23 (protein_entry -> protein_entry accession .)
    PROTEIN_ENTRY   reduce using rule 23 (protein_entry -> protein_entry accession .)
    REFERENCE_ENTRY reduce using rule 23 (protein_entry -> protein_entry accession .)
    ENTRY           reduce using rule 23 (protein_entry -> protein_entry accession .)
    $end            reduce using rule 23 (protein_entry -> protein_entry accession .)
    AND             shift and go to state 40

  ! CONTENT         [ shift and go to state 41 ]


state 17

    (24) protein_entry -> protein_entry comment .
    (43) comment -> comment . COMMENT

    CONTENT         reduce using rule 24 (protein_entry -> protein_entry comment .)
    ACCESSION       reduce using rule 24 (protein_entry -> protein_entry comment .)
    LPARENS         reduce using rule 24 (protein_entry -> protein_entry comment .)
    COMMENT         reduce using rule 24 (protein_entry -> protein_entry comment .)
    LANGLE          reduce using rule 24 (protein_entry -> protein_entry comment .)
    CITATION        reduce using rule 24 (protein_entry -> protein_entry comment .)
    END             reduce using rule 24 (protein_entry -> protein_entry comment .)
    PROTEIN_ENTRY   reduce using rule 24 (protein_entry -> protein_entry comment .)
    REFERENCE_ENTRY reduce using rule 24 (protein_entry -> protein_entry comment .)
    ENTRY           reduce using rule 24 (protein_entry -> protein_entry comment .)
    $end            reduce using rule 24 (protein_entry -> protein_entry comment .)

  ! COMMENT         [ shift and go to state 14 ]


state 18

    (25) protein_entry -> protein_entry citations .
    (39) citations -> citations . CITATION

    CONTENT         reduce using rule 25 (protein_entry -> protein_entry citations .)
    ACCESSION       reduce using rule 25 (protein_entry -> protein_entry citations .)
    LPARENS         reduce using rule 25 (protein_entry -> protein_entry citations .)
    COMMENT         reduce using rule 25 (protein_entry -> protein_entry citations .)
    LANGLE          reduce using rule 25 (protein_entry -> protein_entry citations .)
    CITATION        reduce using rule 25 (protein_entry -> protein_entry citations .)
    END             reduce using rule 25 (protein_entry -> protein_entry citations .)
    PROTEIN_ENTRY   reduce using rule 25 (protein_entry -> protein_entry citations .)
    REFERENCE_ENTRY reduce using rule 25 (protein_entry -> protein_entry citations .)
    ENTRY           reduce using rule 25 (protein_entry -> protein_entry citations .)
    $end            reduce using rule 25 (protein_entry -> protein_entry citations .)

  ! CITATION        [ shift and go to state 42 ]


state 19

    (28) accession -> ACCESSION .

    AND             reduce using rule 28 (accession -> ACCESSION .)
    CONTENT         reduce using rule 28 (accession -> ACCESSION .)
    ACCESSION       reduce using rule 28 (accession -> ACCESSION .)
    LPARENS         reduce using rule 28 (accession -> ACCESSION .)
    COMMENT         reduce using rule 28 (accession -> ACCESSION .)
    LANGLE          reduce using rule 28 (accession -> ACCESSION .)
    CITATION        reduce using rule 28 (accession -> ACCESSION .)
    END             reduce using rule 28 (accession -> ACCESSION .)
    PROTEIN_ENTRY   reduce using rule 28 (accession -> ACCESSION .)
    REFERENCE_ENTRY reduce using rule 28 (accession -> ACCESSION .)
    ENTRY           reduce using rule 28 (accession -> ACCESSION .)
    $end            reduce using rule 28 (accession -> ACCESSION .)


state 20

    (37) citations -> LANGLE . citations RANGLE
    (38) citations -> LANGLE . RANGLE
    (37) citations -> . LANGLE citations RANGLE
    (38) citations -> . LANGLE RANGLE
    (39) citations -> . citations CITATION
    (40) citations -> . CITATION

    RANGLE          shift and go to state 44
    LANGLE          shift and go to state 20
    CITATION        shift and go to state 21

    citations                      shift and go to state 43

state 21

    (40) citations -> CITATION .
